external-crates/move/crates/move-compiler/tests/move_check/ide_mode/struct_method_autocomplete.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/ide_mode/struct_method_autocomplete.move:5:13
  │
5 │     struct B() has copy, drop;
  │             ^ Positional fields are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/ide_mode/struct_method_autocomplete.move:5:16
  │
5 │     struct B() has copy, drop;
  │                ^^^ Postfix abilities are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/ide_mode/struct_method_autocomplete.move:17:18
   │
17 │         let _b = B();
   │                  ^^^ Positional fields are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/struct_method_autocomplete.move:18:24
   │
18 │         let _tmp1 = _a.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/struct_method_autocomplete.move:19:24
   │
19 │         let _tmp2 = _b.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

